feat: update job model and operations to include xstate and rename status enum
